# Local-pet-RAG

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data preprocessing/: convert.py
